--- a/Sass/layout/heareddad.css
+++ b/Sass/layout/heareddad.css
@@ -1,17 +1,3 @@
-/* Error: Undefined mixin.
- *    ,
- * 47 |             @include text($font-Georgia, 25px, 400, 32px, $color-dark-3);
- *    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- *    '
- *   Sass\layout\heareddad.scss 47:13  root stylesheet */
 
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
-  display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: "Error: Undefined mixin.\a    \2577 \a 47 \2502              @include text($font-Georgia, 25px, 400, 32px, $color-dark-3);\d\a    \2502              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\a    \2575 \a   Sass\\layout\\heareddad.scss 47:13  root stylesheet";
-}
+
+/*# sourceMappingURL=heareddad.css.map */
