--- a/Sass/layout/_header.scss
+++ b/Sass/layout/_header.scss
@@ -1,20 +1,26 @@
 .header{
   position: absolute;
-  width: 100%;
-  height: 60px;
-  margin: 0 auto;
+  width: 87%;
   background: none;
-
-  @media  (max-width:769px) {
+  top: 30px;
+  padding-left: 0;
+  @media (min-width: 375px)and (max-width:449px){
       &{
-          top: 30px;
+          padding-left: 45px;
+      }
+  }
+  @media (min-width: 450px) and (max-width:768px) {
+      &{
+          width: 100%;
           }
       }
-  @media (min-width: 770px){
+  @media (min-width: 769px){
       &{
+          width: 100%;
           top: 60px;
           }
       }
+      
   &__row{
       display: flex;
       justify-content: space-between;
