--- a/Sass/layout/_pets.scss
+++ b/Sass/layout/_pets.scss
@@ -1,36 +1,73 @@
-@media  (max-width:425px) {
 .pets{
-    padding: 42px 0;
     background: $color-light-2;
-    height: 790px;
     width: 100%;
-    &__content{
-        height: 707px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-between;
-    }
-        &__title{
-            @include text($font-Georgia, 25px, 400, 32px, $color-dark-3);
-            text-align: center;
-            width: 100%;
-            height: 64px;
+    @media  (max-width:449px) {
+        &{
+            padding: 42px 0;
         }
-        &__sliders{
+        .pets1, .pets2{
+            display: none;
+        }
+    }
+    @media (min-width: 450px) and (max-width:768px) {
+        &{
+        padding: 100px 0 80px;
+        }
+        .pets2{
+            display: none;
+        }
+    }
+    @media (min-width: 769px) {
+        &{
+        padding: 80px 0 100px;
+        }
+    }
+        &__content{
             display: flex;
             flex-direction: column;
             align-items: center;
+            justify-content: center;
+            gap:60px;
         }
+
+        &__title{
+            @include text($font-Georgia, 35px, 400, 45px, $color-dark-3);
+            text-align: center;
+            width: 100%;
+            @media  (max-width:449px) {
+                &{
+                    @include text($font-Georgia, 25px, 400, 32px, $color-dark-3);
+                }
+            }
+        }
+
+        &__sliders{
+            display: flex;
+            align-items: center;
        
+        @media (min-width: 450px) and (max-width:768px) {
+            &{
+                gap: 40px;
+            }
+        }
+        @media (min-width: 769px) {
+            &{
+                gap: 90px;
+            }
+        }
+            }
         &__slider{
-            height: 455px;
+            height: 435px;
             display: flex;
             gap: 30px;
             flex-direction: column;
             justify-content: flex-start;
             align-items: center;
 
+            &:focus,&:hover{
+                background: lighten($color:$color-dark-2, $amount: 70);
+                transform: scale(0.9);
+            }
             &__name{
                 @include text($font-Georgia, 20px, 400, 23px, $color-dark-3);
                 text-align: center;
@@ -40,123 +77,14 @@
                 display: flex;
                 justify-content: space-between;
                 width: 68%;
-                    
-            }
-        
-        }
-    }
-    .pets1, .pets2{
-        display: none;
-    }
-} 
-
-@media (min-width: 426px) and (max-width:769px) {
-    .pets{
-        padding: 100px 0 80px;
-        background: $color-light-2;
-        height: 877px;
-        width: 100%;
-        &__content{
-            height: 697px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: space-between;
-        }
-            &__title{
-                @include text($font-Georgia, 35px, 400, 45px, $color-dark-3);
-                text-align: center;
-                width: 100%;
-            }
-            &__sliders{
-                display: flex;
-                width: 100%;
-                align-items: center;
-                justify-content: center;
-                gap: 40px;
-                &:hover{
-                    transition: all 0.3s linear;
+                @media (min-width: 769px) {
+                    &{
+                        width: 94%;
+                        padding-top: 40px;
+                        position: absolute;
+                    }
                 }
             }
-            &__slider{
-                display: flex;
-                height: 435px;
-                gap: 30px;
-                flex-direction: column;
-                align-items: center;
-                &:hover{
-                    transition: all 0.3s linear;
-                }
-                &__name{
-                    @include text($font-Georgia, 20px, 400, 23px, $color-dark-3);
-                    text-align: center;
-    
-                }
-                &__arrow{
-                    position: absolute;
-                    display: flex;
-                    width: 92%;
-                    justify-content: space-between;
-                }
-            
-            }
         }
-        .pets2{
-            display: none;
-        }
-  }
 
-
-@media (min-width: 770px) {
-.pets{
-    padding: 100px 0 0 0;
-    background: $color-light-2;
-    height: 877px;
-    width: 100%;
-    &__content{
-        height: 697px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-between;
-    }
-        &__title{
-            @include text($font-Georgia, 35px, 400, 45px, $color-dark-3);
-            text-align: center;
-            width: 100%;
-        }
-        &__sliders{
-            display: flex;
-            width: 100%;
-            align-items: center;
-            justify-content: center;
-            gap: 90px;
-            &:hover{
-                transition: all 0.3s linear;
-            }
-            
-        }
-        &__slider{
-            display: flex;
-            height: 435px;
-            gap: 30px;
-            flex-direction: column;
-            align-items: center;
-            &:focus{
-                transition: all 0.3s linear;
-            }
-            &__name{
-                @include text($font-Georgia, 20px, 400, 23px, $color-dark-3);
-                text-align: center;
-
-            }
-            &__arrow{
-                position: absolute;
-                display: flex;
-                width: 94%;
-                justify-content: space-between;
-            }
-        
-        }
-    }
 }
