--- a/Sass/layout/_start-screen.scss
+++ b/Sass/layout/_start-screen.scss
@@ -4,11 +4,15 @@
     display:flex;
     align-items: flex-end;
     height: 100%;
+    padding-top: 148px;
+    
     @media (min-width: 450px) and (max-width:768px) {
-        &{ justify-content: center;}}
+        &{ justify-content: center;
+            padding-top: 148px;}}
+
     @media (min-width: 769px){
         &{  justify-content: center;
-        padding-top: 100px;}}
+        padding-top: 99px;}}
 
     &__screen-content{
         display: flex;
@@ -19,7 +23,7 @@
             flex-direction: column;
             gap: 107px;}}
         @media (min-width: 450px) and (max-width:768px) {
-        &{  height: 121.5vh;
+        &{  
             flex-direction: column;
             gap: 100px;
             justify-content: flex-end;}}
@@ -49,11 +53,10 @@
                 &__start-title {
                     letter-spacing: 0px;
                     width: 100%;
-                    @media  (max-width:449px) {
+                    @media  (max-width:450px) {
                         &{   
                             text-align: center;
                             @include text($font-Georgia, 25px, 400, 32px, $color-light); 
-                            letter-spacing: 0px;
                         }}
                     @media (min-width: 451px){
                         &{ 
@@ -78,16 +81,16 @@
         background-size: contain;
         @media  (max-width:449px) {
             &{  width: 100%;
-                min-height: 270px;
+                min-height: 271px;
             }}
         @media (min-width: 449px) and (max-width:768px) {
             &{  width: 100%;
-                height: 100%;
+                min-height: 593px;
             }}
         @media (min-width: 769px){
             &{ 
                 width: 65%;
-                min-height: 800px;
+                min-height: 809px;
         }}     
     }
 }
