--- a/Sass/main.css
+++ b/Sass/main.css
@@ -53,18 +53,24 @@ table {
 
 .header {
   position: absolute;
-  width: 100%;
-  height: 60px;
-  margin: 0 auto;
+  width: 87%;
   background: none;
+  top: 30px;
+  padding-left: 0;
 }
-@media (max-width: 769px) {
+@media (min-width: 375px) and (max-width: 449px) {
   .header {
-    top: 30px;
+    padding-left: 45px;
   }
 }
-@media (min-width: 770px) {
+@media (min-width: 450px) and (max-width: 768px) {
   .header {
+    width: 100%;
+  }
+}
+@media (min-width: 769px) {
+  .header {
+    width: 100%;
     top: 60px;
   }
 }
@@ -454,16 +460,18 @@ table {
   display: flex;
   align-items: flex-end;
   height: 100%;
+  padding-top: 148px;
 }
 @media (min-width: 450px) and (max-width: 768px) {
   .not-only {
     justify-content: center;
+    padding-top: 148px;
   }
 }
 @media (min-width: 769px) {
   .not-only {
     justify-content: center;
-    padding-top: 100px;
+    padding-top: 99px;
   }
 }
 .not-only__screen-content {
@@ -480,7 +488,6 @@ table {
 }
 @media (min-width: 450px) and (max-width: 768px) {
   .not-only__screen-content {
-    height: 121.5vh;
     flex-direction: column;
     gap: 100px;
     justify-content: flex-end;
@@ -516,7 +523,7 @@ table {
   letter-spacing: 0px;
   width: 100%;
 }
-@media (max-width: 449px) {
+@media (max-width: 450px) {
   .not-only__screen-content__content__start-title {
     text-align: center;
     font-family: Georgia, serif;
@@ -526,7 +533,6 @@ table {
     line-height: 32px;
     color: #FFFFFF;
     letter-spacing: 0.06em;
-    letter-spacing: 0px;
   }
 }
 @media (min-width: 451px) {
@@ -565,27 +571,24 @@ table {
 @media (max-width: 449px) {
   .not-only__puppy-screen {
     width: 100%;
-    min-height: 270px;
+    min-height: 271px;
   }
 }
 @media (min-width: 449px) and (max-width: 768px) {
   .not-only__puppy-screen {
     width: 100%;
-    height: 100%;
+    min-height: 593px;
   }
 }
 @media (min-width: 769px) {
   .not-only__puppy-screen {
     width: 65%;
-    min-height: 800px;
+    min-height: 809px;
   }
 }
 
 .about {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  padding: 80px 175px 100px;
 }
 .about__container {
   width: 100%;
@@ -595,7 +598,6 @@ table {
 }
 @media (min-width: 769px) {
   .about__container {
-    height: 40vh;
     gap: 120px;
     flex-direction: row-reverse;
   }
@@ -604,6 +606,7 @@ table {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  max-width: 430px;
 }
 @media (max-width: 449px) {
   .about__content {
@@ -618,7 +621,12 @@ table {
 }
 @media (min-width: 769px) {
   .about__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     align-items: flex-start;
+    height: 380px;
+    max-width: 430px;
     gap: 25px;
   }
 }
@@ -631,7 +639,6 @@ table {
   color: #545454;
   letter-spacing: 0.06em;
   text-align: center;
-  padding: 1px 30px;
 }
 @media (min-width: 450px) {
   .about__content__title {
@@ -682,24 +689,54 @@ table {
 @media (min-width: 450px) {
   .about__pets {
     width: 100%;
-    height: 100%;
+    min-height: 408px;
   }
 }
 
-@media (max-width: 425px) {
+.pets {
+  background: #F6F6F6;
+  width: 100%;
+}
+@media (max-width: 449px) {
   .pets {
     padding: 42px 0;
-    background: #F6F6F6;
-    height: 790px;
-    width: 100%;
   }
-  .pets__content {
-    height: 707px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
+  .pets .pets1, .pets .pets2 {
+    display: none;
   }
+}
+@media (min-width: 450px) and (max-width: 768px) {
+  .pets {
+    padding: 100px 0 80px;
+  }
+  .pets .pets2 {
+    display: none;
+  }
+}
+@media (min-width: 769px) {
+  .pets {
+    padding: 80px 0 100px;
+  }
+}
+.pets__content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 60px;
+}
+.pets__title {
+  font-family: Georgia, serif;
+  font-style: normal;
+  font-size: 35px;
+  font-weight: 400;
+  line-height: 45px;
+  color: #545454;
+  letter-spacing: 0.06em;
+  text-align: center;
+  width: 100%;
+}
+@media (max-width: 449px) {
   .pets__title {
     font-family: Georgia, serif;
     font-style: normal;
@@ -708,171 +745,57 @@ table {
     line-height: 32px;
     color: #545454;
     letter-spacing: 0.06em;
-    text-align: center;
-    width: 100%;
-    height: 64px;
-  }
-  .pets__sliders {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  .pets__slider {
-    height: 455px;
-    display: flex;
-    gap: 30px;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-  }
-  .pets__slider__name {
-    font-family: Georgia, serif;
-    font-style: normal;
-    font-size: 20px;
-    font-weight: 400;
-    line-height: 23px;
-    color: #545454;
-    letter-spacing: 0.06em;
-    text-align: center;
-  }
-  .pets__slider__arrow {
-    display: flex;
-    justify-content: space-between;
-    width: 68%;
-  }
-
-  .pets1, .pets2 {
-    display: none;
   }
 }
-@media (min-width: 426px) and (max-width: 769px) {
-  .pets {
-    padding: 100px 0 80px;
-    background: #F6F6F6;
-    height: 877px;
-    width: 100%;
-  }
-  .pets__content {
-    height: 697px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-  }
-  .pets__title {
-    font-family: Georgia, serif;
-    font-style: normal;
-    font-size: 35px;
-    font-weight: 400;
-    line-height: 45px;
-    color: #545454;
-    letter-spacing: 0.06em;
-    text-align: center;
-    width: 100%;
-  }
+.pets__sliders {
+  display: flex;
+  align-items: center;
+}
+@media (min-width: 450px) and (max-width: 768px) {
   .pets__sliders {
-    display: flex;
-    width: 100%;
-    align-items: center;
-    justify-content: center;
     gap: 40px;
   }
-  .pets__sliders:hover {
-    transition: all 0.3s linear;
-  }
-  .pets__slider {
-    display: flex;
-    height: 435px;
-    gap: 30px;
-    flex-direction: column;
-    align-items: center;
-  }
-  .pets__slider:hover {
-    transition: all 0.3s linear;
-  }
-  .pets__slider__name {
-    font-family: Georgia, serif;
-    font-style: normal;
-    font-size: 20px;
-    font-weight: 400;
-    line-height: 23px;
-    color: #545454;
-    letter-spacing: 0.06em;
-    text-align: center;
-  }
-  .pets__slider__arrow {
-    position: absolute;
-    display: flex;
-    width: 92%;
-    justify-content: space-between;
-  }
-
-  .pets2 {
-    display: none;
-  }
 }
-@media (min-width: 770px) {
-  .pets {
-    padding: 100px 0 0 0;
-    background: #F6F6F6;
-    height: 877px;
-    width: 100%;
-  }
-  .pets__content {
-    height: 697px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-  }
-  .pets__title {
-    font-family: Georgia, serif;
-    font-style: normal;
-    font-size: 35px;
-    font-weight: 400;
-    line-height: 45px;
-    color: #545454;
-    letter-spacing: 0.06em;
-    text-align: center;
-    width: 100%;
-  }
+@media (min-width: 769px) {
   .pets__sliders {
-    display: flex;
-    width: 100%;
-    align-items: center;
-    justify-content: center;
     gap: 90px;
   }
-  .pets__sliders:hover {
-    transition: all 0.3s linear;
-  }
-  .pets__slider {
-    display: flex;
-    height: 435px;
-    gap: 30px;
-    flex-direction: column;
-    align-items: center;
-  }
-  .pets__slider:focus {
-    transition: all 0.3s linear;
-  }
-  .pets__slider__name {
-    font-family: Georgia, serif;
-    font-style: normal;
-    font-size: 20px;
-    font-weight: 400;
-    line-height: 23px;
-    color: #545454;
-    letter-spacing: 0.06em;
-    text-align: center;
-  }
+}
+.pets__slider {
+  height: 435px;
+  display: flex;
+  gap: 30px;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+.pets__slider:focus, .pets__slider:hover {
+  background: white;
+  transform: scale(0.9);
+}
+.pets__slider__name {
+  font-family: Georgia, serif;
+  font-style: normal;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 23px;
+  color: #545454;
+  letter-spacing: 0.06em;
+  text-align: center;
+}
+.pets__slider__arrow {
+  display: flex;
+  justify-content: space-between;
+  width: 68%;
+}
+@media (min-width: 769px) {
   .pets__slider__arrow {
-    position: absolute;
-    display: flex;
     width: 94%;
-    justify-content: space-between;
+    padding-top: 40px;
+    position: absolute;
   }
 }
+
 @media (max-width: 425px) {
   .help {
     display: flex;
